--- a/oefening/src/styles/home.css
+++ b/oefening/src/styles/home.css
@@ -1,5 +1,5 @@
 .title{
-  background-color: aquamarine;
-  color: blue;
-  padding: 30px;
+    color: rgb(111,250,25);
+    background-color: rgb(0,100,30);
+    padding: 30px;
 }
